[package]
name = "zen_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
